.metadata/.plugins/org.eclipse.cdt.ui/01_Prueba.build.log
16:31:09 **** Incremental Build of configuration Debug for project 01_Prueba ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/app_threadx.c" -mcpu=cortex-m33 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32U575xx -DTX_INCLUDE_USER_DEFINE_FILE -DTX_SINGLE_MODE_NON_SECURE=1 -c -I../Core/Inc -I../Drivers/STM32U5xx_HAL_Driver/Inc -I../Drivers/STM32U5xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32U5xx/Include -I../Drivers/CMSIS/Include -I"D:/githubs/fmc-320u/libs" -I../AZURE_RTOS/App -I../Middlewares/ST/threadx/common/inc -I../Middlewares/ST/threadx/ports/cortex_m33/gnu/inc -I../Middlewares/ST/threadx/utility/low_power -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/app_threadx.d" -MT"Core/Src/app_threadx.o" --specs=nano.specs -mfpu=fpv5-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/app_threadx.o"
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m33 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32U575xx -DTX_INCLUDE_USER_DEFINE_FILE -DTX_SINGLE_MODE_NON_SECURE=1 -c -I../Core/Inc -I../Drivers/STM32U5xx_HAL_Driver/Inc -I../Drivers/STM32U5xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32U5xx/Include -I../Drivers/CMSIS/Include -I"D:/githubs/fmc-320u/libs" -I../AZURE_RTOS/App -I../Middlewares/ST/threadx/common/inc -I../Middlewares/ST/threadx/ports/cortex_m33/gnu/inc -I../Middlewares/ST/threadx/utility/low_power -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv5-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/app_threadx.c: In function 'App_ThreadX_LowPower_Exit':
../Core/Src/app_threadx.c:207:5: warning: implicit declaration of function 'SystemClock_Config'; did you mean 'SysTick_Config'? [-Wimplicit-function-declaration]
  207 |     SystemClock_Config();
      |     ^~~~~~~~~~~~~~~~~~
      |     SysTick_Config
../Core/Src/app_threadx.c: In function 'menu_task_entry':
../Core/Src/app_threadx.c:249:34: error: 'hlptim4' undeclared (first use in this function)
  249 |         HAL_LPTIM_Counter_Start(&hlptim4);
      |                                  ^~~~~~~
../Core/Src/app_threadx.c:249:34: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/app_threadx.c:243:16: warning: variable 'pulse_counter' set but not used [-Wunused-but-set-variable]
  243 |     static int pulse_counter = 0;
      |                ^~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:47: Core/Src/app_threadx.o] Error 1
make: *** Waiting for unfinished jobs....
"make -j12 all" terminated with exit code 2. Build might be incomplete.

16:31:10 Build Failed. 3 errors, 2 warnings. (took 1s.260ms)

